hphp/hack/test/typecheck/reactive/test_global_class.php.exp
File "test_global_class.php", line 11, characters 8-26:
Static property cannot be used in a reactive context. (Typing[4228])
